# mlops-lite

./: .gitignore  LICENSE  README.md  alembic.ini  main.py  pyproject.toml  sandbox.py
mlopslite/: client.py
mlopslite/artifacts/: dataset.py  pipeline.py
mlopslite/registry/: datamodel.py  db.py
mlopslite/registry/migration/: env.py
mlopslite/registry/migration/versions/: deaf60367529_1680186594_update.py
src/mlopslite/: alembic_setup.py  client.py  utils.py
src/mlopslite/artifacts/: column_metadata.py  dataset.py  dataset_metadata.py  deployable.py  metadata.py  model.py  pipeline.py
src/mlopslite/registry/: alembic.ini  datamodel.py  db.py  filesystem.py  registry.py  registryconfig.py
src/mlopslite/registry/migration/: env.py
src/mlopslite/registry/migration/versions/: 1c31cfa68a4e_1683122910_update.py  206804231699_1681456711_update.py  2f3ce3aad699_1687164769_update.py  367ad9460f02_1682675900_update.py  41e430568538_1683097994_update.py  6170b3d86d51_1681135598_update.py  6da16d133fac_1681566194_update.py  c1117c888076_1682496846_update.py  deaf60367529_1680186594_update.py  e45bf0974c4b_1682686627_update.py
tests/: test_dataset.py
