[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlopslite"
version = "0.0.1"
authors = [
  { name="statespace" },
]
description = "Simple(r) MLOps setup for small projects"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "sqlalchemy >=2.0.0",
    "pandas >=1.5.0"
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
